# PyDPOCL

./: .gitignore  Flaws.py  GPlan.py  PyDPOCL.py  README.md  execute_random_problems.py  execute_repeat.py  generate_random_problems.py  main.py  main_load_plan.py  pyproject.toml  run_experiment.py  test_load_init_state.py  test_plan_manipulation.py  test_results.csv  test_results_classic.csv  test_variablebindings.py  test_variablebindings_geometric.py  visualize_worldmodel.py  worldmodel.py
Ground_Compiler_Library/: GElm.py  Ground.py  UnGround.py  VariableBindings.py  VariableBindingsGeometric.py  VariableBindingsSymbolic.py  pddlToGraphs.py  precompile.py
Ground_Compiler_Library/domains/: manipulation-domain.pddl  manipulation-problem-symbolic.pddl  manipulation-problem.pddl  manipulation-worldmodel.json
domains/: ground_steps.txt  ground_steps_stripped.txt
domains/ark-domain/: ark-domain.ark-problem0  ark-domain.ark-problem1  ark-domain.ark-problem10  ark-domain.ark-problem100  ark-domain.ark-problem101  ark-domain.ark-problem102  ark-domain.ark-problem103  ark-domain.ark-problem104  ark-domain.ark-problem105  (+106 more)
matlab/: compare_results.m  process_results.m  scalability
src/: Flaws.py  main_load_plan.py
test_results/: random_batch_test_results.csv  random_batch_test_results_classic.csv  repeat_test_84_problem.csv
tests/: test_benchmarks.py  test_disjunctions.py  test_load_init_state.py  test_pathPlanner.py  test_plan.json  test_plan_manipulation.py  test_save_and_load_plan.py  test_variablebindings_geometric.py  test_variablebindings_symbolic.py
(+1400 files in other folders)
