[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "PyPOCL"
version = "0.0.1"
authors = [
  { name="Peter van Dooren", email="p.v.dooren@tue.nl" },
]
description = "Package implementing a partial order causal link planner capable of working with geometric variables"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/PetervDooren/PyDPOCL"
Issues = "https://github.com/PetervDooren/PyDPOCL/issues"